# biomes-game

./: .bazelrc  .bazelversion  .clangd  .dependency-cruiser.js  .dockerignore  .env  .env.local.template  .eslintrc.js  .gitattributes  .gitignore  .mocharc.json  .stylelintrc.js  404.html  BUILD.bazel  CNAME  CREDITS  Dockerfile.biomes  Dockerfile.bob  LICENSE  README.md  WORKSPACE.bazel  b  biomes.config.dev.yaml  biomes.config.local.yaml.template  faq.html  gameplay.html  index.html  modules.d.ts  next.config.js  package.json  postcss.config.js  pull_request_template.md  requirements.txt  roadmap.html  server.webpack.config.ts  sitemap.xml  tailwind.config.js  tsconfig.json  tsconfig.next.json  tsconfig.server.json
src/bazel_utils/: BUILD.bazel  common.bzl
src/bazel_utils/cpp/: BUILD.bazel  release_transitions.bzl
src/bazel_utils/rust/: BUILD.bazel  release_transitions.bzl  toolchain.bzl
src/bazel_utils/shaders/: BUILD.bazel  defs.bzl  gen_ts.rs  link_info.rs  materials.rs  preprocess.rs
src/cayley/impl/: BUILD.bazel  Cargo.toml
src/cayley/impl/benches/: array.rs
src/cayley/impl/data/: azalea_adult.gltf  bellflower_seed.gltf  dandelion.gltf
src/cayley/impl/py_ext/: Cargo.toml  pyproject.toml
src/cayley/impl/py_ext/src/: lib.rs
src/cayley/impl/scripts/: gen_ops.py
src/cayley/impl/src/: lib.rs
src/cayley/impl/src/arrays/: erasure.rs  iters.rs  mod.rs  ranges.rs  routines.rs  views.rs
src/cayley/impl/src/graphics/: aabbs.rs  mapping.rs  mod.rs  models.rs  rays.rs  rects.rs  textures.rs
src/cayley/impl/src/io/: mod.rs
src/cayley/impl/src/program/: exec.rs  mod.rs
src/cayley/impl/wasm/: Cargo.toml
src/cayley/impl/wasm/src/: arrays.rs  bundles.rs  graphics.rs  lib.rs  program.rs
src/client/game/shaders/: BUILD.bazel  basic.fs  basic.material.json  basic.vs  basic_translucent.fs  basic_translucent.material.json  basic_translucent.vs  block_item.fs  block_item.material.json  blocks.fs  blocks.material.json  boundary.fs  boundary.material.json  boundary.vs  breakable.fs  breakable.material.json  colors.glsl  common.glsl  depth.material.json  depth_only.fs  destruction.fs  destruction.material.json  destruction.vs  flora.fs  flora.material.json  flora.vs  flora_item.fs  flora_item.material.json  flora_item.vs  flora_low_quality.material.json  glass.fs  glass.material.json  glass.vs  glass_item.fs  glass_item.material.json  glass_item.vs  hexagonal_bloom.fs  hexagonal_bloom.material.json  hexagonal_bloom.vs  highlighted_translucent.fs  (+38 more)
src/client/game/shaders/postprocessing/: BUILD.bazel  bloom_combine.fs  bloom_combine.material.json  bloom_downsample.fs  bloom_downsample.material.json  bloom_threshold.fs  bloom_threshold.material.json  color_correction.fs  color_correction.material.json  combine.fs  combine.material.json  depth.fs  depth.material.json  fog.glsl  forward_uv.vs  gamma22.fs  gaussian13.fs  (+24 more)
src/galois/js/lang/: BUILD.bazel  hash.ts  index.ts  parse.ts  transport.ts
src/galois/py/assets/: BUILD.bazel  build.py  gen_ts.py  lang.py
src/galois/shaders/: BUILD.bazel  block_geometry.fs  block_geometry.material.json  block_geometry.vs  block_item.fs  block_item.material.json  block_item.vs  blocks.fs  blocks.material.json  blocks.vs  flora_item.fs  flora_item.material.json  flora_item.vs  florae.fs  florae.material.json  florae.vs  glass.fs  groups.fs  groups.material.json  groups.vs  voxels.fs  voxels.material.json  voxels.vs  water.fs  water.material.json  water.vs
src/shared/cpp_ext/: BUILD.bazel
voxeloo/anima/: BUILD.bazel  find_surfaces.cpp  find_surfaces.hpp
voxeloo/biomes/: BUILD.bazel  biomes.cpp  biomes.hpp  biomes_bench.cpp  biomes_test.cpp  culling.cpp  culling.hpp  culling_test.cpp  memoize.hpp  memoize_test.cpp  migration.hpp  noise.cpp  noise.hpp  primitives.hpp  rasterization.hpp  rasterization_test.cpp  shards.cpp  shards.hpp  shards_test.cpp
voxeloo/common/: BUILD.bazel  bits.hpp  bits_test.cpp  blocks.hpp  blocks_bench.cpp  blocks_test.cpp  boxifier.cpp  boxifier.hpp  boxifier_test.cpp  colors.hpp  colors_test.cpp  disjoint_set.hpp  errors.cpp  errors.hpp  format.hpp  format_test.cpp  frustum.cpp  frustum.hpp  geometry_test.cpp  hashing.hpp  history.hpp  history_test.cpp  hull.cpp  hull.hpp  hull_test.cpp  knn.cpp  knn.hpp  knn_test.cpp  macros.hpp  march.hpp  meshes.hpp  metrics.cpp  metrics.hpp  quadifier.cpp  quadifier.hpp  quadifier_test.cpp  random.hpp  rays.cpp  rays.hpp  rays_test.cpp  (+26 more)
voxeloo/gaia/: BUILD.bazel  deps.hpp  lazy.hpp  light.cpp  light.hpp  light_test.cpp  logger.hpp  maps.hpp  maps_test.cpp  muck.cpp  muck.hpp  muck_test.cpp  queue.hpp  scanner.hpp  stream.hpp  stream_test.cpp  terrain.cpp  terrain.hpp  terrain_test.cpp  timer.hpp  water.cpp  water.hpp
voxeloo/galois/: BUILD.bazel  blocks.hpp  collision.hpp  conv.hpp  csg.hpp  florae.hpp  galois_test.cpp  glass.hpp  groups.hpp  lighting.hpp  lighting_test.cpp  material_properties.hpp  muck.hpp  plots.hpp  sbo.hpp  shapes.hpp  terrain.hpp  transforms.hpp  utils.hpp  water.hpp
voxeloo/js_ext/: BUILD.bazel  anima.cpp  anima.hpp  biomes.hpp  buffers.cpp  buffers.hpp  common.cpp  common.hpp  culling.hpp  ext.cpp  gaia.hpp  galois.hpp  mapping.hpp  march.cpp  march.hpp  memory.cpp  memory.hpp  shards.cpp  shards.hpp  tensors.cpp  tensors.hpp  values.hpp  voxels.cpp  voxels.hpp
voxeloo/mapping/: BUILD.bazel  heights.cpp  heights.hpp  util.hpp
voxeloo/py_ext/: BUILD.bazel  biomes.cpp  biomes.hpp  blocks.cpp  blocks.hpp  culling.cpp  culling.hpp  ext.cpp  galois.cpp  galois.hpp  geometry.cpp  geometry.hpp  meshes.cpp  meshes.hpp  noise.cpp  noise.hpp  primitives.cpp  primitives.hpp  rasterization.cpp  rasterization.hpp  rays.cpp  rays.hpp  runs.cpp  runs.hpp  shards.cpp  shards.hpp  spatial.cpp  spatial.hpp  tensors.cpp  tensors.hpp  voronoi.cpp  voronoi.hpp  voxels.cpp  voxels.hpp
voxeloo/tensors/: BUILD.bazel  arrays.hpp  arrays_test.cpp  buffers.hpp  buffers_test.cpp  hashing.hpp  ranges.hpp  routines.hpp  routines_test.cpp  sparse.hpp  succinct.cpp  succinct.hpp  succinct_bench.cpp  succinct_test.cpp  tensors.hpp  tensors_test.cpp  utils.hpp
(+3406 files in other folders)
