load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "py_ext",
    srcs = glob([
        "*.cpp",
        "*.hpp",
    ]),
    deps = [
        "//voxeloo/biomes",
        "//voxeloo/biomes:culling",
        "//voxeloo/biomes:migration",
        "//voxeloo/biomes:noise",
        "//voxeloo/biomes:primitives",
        "//voxeloo/biomes:rasterization",
        "//voxeloo/biomes:shards",
        "//voxeloo/common:blocks",
        "//voxeloo/common:colors",
        "//voxeloo/common:errors",
        "//voxeloo/common:format",
        "//voxeloo/common:geometry",
        "//voxeloo/common:knn",
        "//voxeloo/common:meshes",
        "//voxeloo/common:rays",
        "//voxeloo/common:spatial",
        "//voxeloo/common:succinct",
        "//voxeloo/common:threads",
        "//voxeloo/common:transport",
        "//voxeloo/common:utils",
        "//voxeloo/common:voxels",
        "//voxeloo/galois:csg",
        "//voxeloo/galois:florae",
        "//voxeloo/galois:groups",
        "//voxeloo/galois:lighting",
        "//voxeloo/galois:material_properties",
        "//voxeloo/galois:terrain",
        "//voxeloo/galois:transforms",
        "//voxeloo/galois:water",
        "//voxeloo/mapping",
    ],
)
